fix ask hn page font issue on mobile

--- a/src/styles/components/_askhn.sass
+++ b/src/styles/components/_askhn.sass
@@ -57,6 +57,7 @@
 .askhn__body
 
     font-size: 14px
+    font-family: $text-font
     line-height: 1.22
 
     +desktop-up
@@ -75,6 +76,7 @@
     font-weight: bold
     font-size: 1.06em
     text-decoration: underline
+    margin-top: 1.5em
 
     span
         padding-left: 4px
